Add coursework, update GPA, optimize CSS

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                         <h3>Master of Science in Computer Engineering</h3>
                         <h4>San Diego State University</h4>
                         <span class="timeline-date">Aug 2024 - May 2026</span>
-                        <p class="gpa">GPA: 3.2/4</p>
-                        <div class="coursework"><h5>Relevant Coursework:</h5><ul><li>AI for Unmanned Systems (Grade A)</li></ul></div>
+                        <p class="gpa">GPA: 3.5/4</p>
+                        <div class="coursework"><h5>Relevant Coursework:</h5><ul><li>AI for Unmanned Systems (Grade A)</li><li>Data Mining and Analysis (Grade A)</li><li>Reinforcement Learning (Grade A)</li></ul></div>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -172,6 +172,77 @@
                 <div class="certification-card">
                     <div class="certification-image"><img src="Assets/cert-johns-hopkins.jpg" alt="Johns Hopkins University" class="cert-img" loading="lazy"></div>
                     <div class="certification-content"><h3>The Data Scientist's Toolbox</h3><p>Data Science fundamentals, R programming, version control, and reproducible research</p><div class="certification-tech"><span>Johns Hopkins</span><span>Coursera</span><span>Jan 2022</span></div><div class="certification-links"><a href="https://coursera.org/verify/NPMJJMKBJWTZ" target="_blank" rel="noopener" class="certification-link"><i class="fas fa-external-link-alt"></i> Verify Certificate</a></div></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="learning" class="learning-journey">
+        <div class="container">
+            <h2 class="section-title">Continuous Learning</h2>
+            <p class="section-subtitle">Beyond formal certifications, I've completed 72 LinkedIn Learning courses across multiple domains</p>
+            <div class="learning-stats">
+                <div class="stat-card">
+                    <div class="stat-number">72</div>
+                    <div class="stat-label">Courses Completed</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-number">22</div>
+                    <div class="stat-label">Certifications</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-number">9</div>
+                    <div class="stat-label">Categories</div>
+                </div>
+            </div>
+            <div class="learning-categories">
+                <div class="learning-category">
+                    <div class="category-icon"><i class="fas fa-database"></i></div>
+                    <h3>Data & SQL</h3>
+                    <span class="course-count">12 courses</span>
+                    <p>Advanced SQL, Data Reporting, SQL Server, Excel Analytics</p>
+                </div>
+                <div class="learning-category">
+                    <div class="category-icon"><i class="fab fa-python"></i></div>
+                    <h3>Python & ML</h3>
+                    <span class="course-count">10 courses</span>
+                    <p>Data Analysis, OOP, Feature Engineering, Recommendation Systems</p>
+                </div>
+                <div class="learning-category">
+                    <div class="category-icon"><i class="fas fa-brain"></i></div>
+                    <h3>AI & NLP</h3>
+                    <span class="course-count">4 courses</span>
+                    <p>LLMs, BERT, AI for Cybersecurity, GraphQL</p>
+                </div>
+                <div class="learning-category">
+                    <div class="category-icon"><i class="fas fa-chart-line"></i></div>
+                    <h3>Data Visualization</h3>
+                    <span class="course-count">5 courses</span>
+                    <p>Tableau Dashboards, Data Analysis, Presentation Design</p>
+                </div>
+                <div class="learning-category">
+                    <div class="category-icon"><i class="fas fa-code"></i></div>
+                    <h3>Web Development</h3>
+                    <span class="course-count">6 courses</span>
+                    <p>React.js, HTML/CSS, Django, ASP.NET, Cloud Foundations</p>
+                </div>
+                <div class="learning-category">
+                    <div class="category-icon"><i class="fas fa-laptop-code"></i></div>
+                    <h3>Programming</h3>
+                    <span class="course-count">4 courses</span>
+                    <p>Java, C++, C#, Python Advanced</p>
+                </div>
+                <div class="learning-category">
+                    <div class="category-icon"><i class="fas fa-users"></i></div>
+                    <h3>Professional Skills</h3>
+                    <span class="course-count">8 courses</span>
+                    <p>Communication, Conflict Resolution, Career Development</p>
+                </div>
+                <div class="learning-category">
+                    <div class="category-icon"><i class="fas fa-drafting-compass"></i></div>
+                    <h3>Engineering & Design</h3>
+                    <span class="course-count">5 courses</span>
+                    <p>AutoCAD, SOLIDWORKS, Blender, CATIA</p>
                 </div>
             </div>
         </div>
