--- a/avatar.html
+++ b/avatar.html
@@ -39,9 +39,15 @@
                 <div class="response-area" id="response-area"><div class="response-text" id="response-text"><p class="greeting-text">Hello, I am Disha. Feel free to ask me anything about my background, projects, or experience.</p></div></div>
                 <div class="suggestions" id="suggestions">
                     <button class="suggestion-btn" data-query="Tell me about yourself">About Me</button>
-                    <button class="suggestion-btn" data-query="What is your work experience?">Experience</button>
-                    <button class="suggestion-btn" data-query="What projects have you worked on?">Projects</button>
-                    <button class="suggestion-btn" data-query="What are your technical skills?">Skills</button>
+                    <button class="suggestion-btn" data-query="Tell me about your AI work at Ema">Ema AI Work</button>
+                    <button class="suggestion-btn" data-query="What certifications do you have?">22 Certifications</button>
+                    <button class="suggestion-btn" data-query="Tell me about your continuous learning">72 Courses</button>
+                </div>
+                <div class="quick-actions" id="quick-actions">
+                    <button class="quick-action-btn" data-query="What's your most impactful project?">Best Project</button>
+                    <button class="quick-action-btn" data-query="Tell me about your Brain Tumor AI project">Healthcare AI</button>
+                    <button class="quick-action-btn" data-query="What metrics have you achieved?">Key Metrics</button>
+                    <button class="quick-action-btn" data-query="What are your hobbies?">Hobbies</button>
                 </div>
                 <div class="input-area">
                     <div class="input-wrapper">
