Migrate from Netlify to Cloudflare Pages
- Add Cloudflare Pages Functions (functions/api/)
- Convert serverless functions to Cloudflare format
- Add CORS middleware for API routes
- Update package.json with Cloudflare scripts
- Add wrangler.toml configuration
- Add deployment documentation
- Remove Netlify configuration and functions
- Reorganize docs into docs/ folder

--- a/avatar.html
+++ b/avatar.html
@@ -25,9 +25,9 @@
         <div class="avatar-content">
             <div class="video-section">
                 <div class="video-frame">
-                    <video id="video-greeting" class="active" src="Assets/namaste.mp4" preload="auto" playsinline muted autoplay></video>
-                    <video id="video-idle" src="Assets/working.mp4" preload="auto" loop playsinline muted></video>
-                    <video id="video-goodbye" src="Assets/bye.mp4" preload="auto" playsinline muted></video>
+                    <video id="video-greeting" class="active" src="assets/namaste.mp4" preload="auto" playsinline muted autoplay></video>
+                    <video id="video-idle" src="assets/working.mp4" preload="auto" loop playsinline muted></video>
+                    <video id="video-goodbye" src="assets/bye.mp4" preload="auto" playsinline muted></video>
                     <div class="video-overlay"></div>
                 </div>
                 <canvas id="waveform" class="waveform-canvas" width="200" height="40"></canvas>
