Split portfolio and chatbot into separate sites
- Remove chatbot files (avatar.html/js/css, videos)
- Remove Cloudflare functions (moved to disha-chat repo)
- Update "Chat with Me" to link to external chatbot
- Simplify package.json for static site
- Portfolio now pure static for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <h2 class="hero-subtitle">Computer Engineering Graduate Student & AI Application Engineer</h2>
                     <p class="hero-description">Passionate about AI, automation, and full-stack development. Currently pursuing M.S. in Computer Engineering at San Diego State University.</p>
                     <div class="hero-buttons">
-                        <a href="avatar.html" class="btn btn-primary magnetic-btn"><i class="fas fa-comments"></i> Chat with Me</a>
+                        <a href="https://disha-chat.pages.dev" class="btn btn-primary magnetic-btn" target="_blank" rel="noopener"><i class="fas fa-comments"></i> Chat with Me</a>
                         <a href="#projects" class="btn btn-secondary magnetic-btn">View My Work</a>
                         <a href="Disha Sawant Resume 2025.pdf" class="btn btn-outline magnetic-btn" download aria-label="Download Resume"><i class="fas fa-download"></i> Resume</a>
                     </div>
